# super_slurpy

./: .gitignore  LICENSE  MANIFEST.in  README.md  clean.sh  index.html  pyproject.toml  setup.py
.github/workflows/: docs.yaml  release.yaml  test_release.yaml
docs/: Changelog.markdown  Cli.markdown  Gui.markdown  Makefile  Parameters.markdown  clean_rst.py  index.md
docs/source/: Changelog.markdown  Cli.markdown  Contributors.markdown  Installation.markdown  Parameters.markdown  conf.py  index.rst
latest/: .buildinfo  Changelog.html  Cli.html  Contributors.html  Gui.html  Installation.html  Parameters.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
latest/_modules/: index.html
latest/_sources/: Changelog.markdown.txt
latest/api/: modules.html  super_slurpy.cli.html  super_slurpy.config.html  super_slurpy.constants.html  super_slurpy.core.html  super_slurpy.gui.html  super_slurpy.html  super_slurpy.model.html  super_slurpy.motion.html  super_slurpy.shape.html
src/super_slurpy/: __init__.py  cli.py  config.py  constants.py  core.pxd  core.pyx  gui.py  image.c  make_snake.c  model.py  motion.py  shape.py  slurpy.yaml  slurpy_default_seed_spline.csv  snake.pxd  spline.c  super_slurpy.pyx
v0.5.0/: Changelog.html  Contributors.html  index.html  py-modindex.html  searchindex.js
v0.5.0-alpha.7/: .buildinfo  Changelog.html  Cli.html  Contributors.html  Gui.html  Installation.html  Parameters.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.5.0-alpha.7/_modules/: index.html
v0.5.0-alpha.7/_sources/: Changelog.markdown.txt
v0.5.0-alpha.7/_static/: documentation_options.js
v0.5.0-alpha.7/api/: modules.html  super_slurpy.cli.html  super_slurpy.config.html  super_slurpy.constants.html  super_slurpy.core.html  super_slurpy.gui.html  super_slurpy.html  super_slurpy.model.html  super_slurpy.motion.html  super_slurpy.shape.html
v0.5.0-alpha.8/: .buildinfo  Changelog.html  Cli.html  Contributors.html  Gui.html  Installation.html  Parameters.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.5.0-alpha.9/: .buildinfo  Cli.html  Gui.html  index.html  objects.inv  searchindex.js
v0.5.0-beta.1/: Changelog.html  Contributors.html  objects.inv  py-modindex.html
v0.5.1/: .buildinfo  Changelog.html  Contributors.html  genindex.html  searchindex.js
v0.5.2/: .buildinfo  Cli.html  Gui.html  Parameters.html  index.html  objects.inv  py-modindex.html  search.html
v0.5.3/: .buildinfo  Changelog.html  Contributors.html  Gui.html  Installation.html  genindex.html  search.html
v0.5.4/: Changelog.html  Cli.html  Installation.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
v0.5.5/: Cli.html  Contributors.html  Gui.html  Installation.html  Parameters.html  index.html  search.html
(+104 files in other folders)
