[project]
name = "super-slurpy"
version = "0.2.0"
description = "Super SLURPy: Python version of Speech and Language Ultrasound Research Package"
readme = "README.md"
authors = [
    { name = "Pertti Palo", email = "giuthas@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.3",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
slurpy = "super_slurpy:main"
super-slurpy = "super_slurpy:main"

[project.optional-dependencies]
gui = [
    "matplotlib>=3.10.8",
    "opencv-python>=4.13.0.92",
    "pyqt6>=6.11.0",
    "scipy>=1.17.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
