[project]
name = "super-slurpy"
version = "0.3.3"
description = "Super SLURPy: Python version of Speech and Language Ultrasound Research Package"
readme = "README.md"
authors = [
    { name = "Pertti Palo", email = "giuthas@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "av>=17.0.1",
    "click>=8.3.3",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "pydantic>=2.13.3",
    "pyyaml>=6.0.3",
]

[project.scripts]
slurpy = "super_slurpy.cli:run_cli"
super-slurpy = "super_slurpy.cli:run_cli"

[project.optional-dependencies]
gui = [
    "matplotlib>=3.10.8",
    "pyqt6>=6.11.0",
    "scipy>=1.17.1",
]

[build-system]
requires = ["setuptools>=61.0", "Cython>=3.0", "numpy>=2.4.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"super_slurpy" = ["*.yaml"]

[dependency-groups]
dev = [
    "icecream>=2.2.0",
]

[tool.setuptools]
script-files = ["setup.py"]
